respec vmList, specify some other utilities

--- a/TODO
+++ b/TODO
@@ -1,7 +1,28 @@
 # ~/dev/py/vmmgr/TODO
 
-2014-08-22
-    * write boto script to verify tables in vmmgr/__init__.py
+2014-09-01
+    * respec vmList: it appears to have been hacked from a quite 
+        different application.  Change to list all instances in EC2,
+        distinguishing the core 4 instances, which are presumed to be
+        permanent, from others, presumed to be temporary
+        - need an option to list installed packages
+        - -a option lists all, including core
+        - otherwise list those named
+    * add vmLaunch
+        - use appropriate Canonical Ubuntu LTS 14.04 image
+        - must NOT duplicate/replace any of the 4 core instances
+        - apt-get update 
+        - install basic packages
+            * aptitude 
+        -G option installs Go and prerequisites
+            * prerequisites: bzr gcc git libc6-dev mercurial
+            * must mkdir /usr/local/src
+            * edit /etc/environment using sed
+    * add vmKill
+        - -a kill all non-core instances 
+        - otherwise kill those listed, excluding core instances, even
+            if listed
+    * vmVerify: boto script to verify tables in vmmgr/__init__.py
 
 2014-08-21
     * git remote set-url origin git@github.com:jddixon/PROJECT          * DONE
