--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@
 # use 'countem" to count lines - but remember to rm -rf build/
 #--------------------------------------------------------------------
 
+v0.3.0
+    2014-10-12
+        * skeletal vmList                                           SLOC  234
+
 v0.2.0
     2014-09-10
         * introduced new classes: VMMgr, Host, EC2Host, LinuxBox,
