--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 # ~/dev/py/vmmgr/TODO
 
+2014-11-28
+    * region parameter is RegionInfo object.  To use string name, try
+        v = boto.connect.toRegion('eu-west-1')
+
 2014-11-25
     * FIX: although ec2din succeeds, ./testSetup.py fails citing
         an AuthFailure
