proj: converting to Python 3

--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 # ~/dev/py/vmmgr/TODO
 
+2014-12-15
+    * FIX: after conversion to Python 3, get three warnings about open
+        sockets (used to be AuthFailures) when running testSetup.py
+
 2014-11-30 (-28, edited)
     * region parameter is RegionInfo object.  To use string name, try
             v = boto.ec2.connect_to_region('eu-west-1')
