--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.4.1
+    2014-12-15
+        * convert to Python 3                                       SLOC  389
 v0.4.0
     2014-12-01
         * renamed GATEWAYS IGATEWAYS, gateways igateways            SLOC  389
