--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.4.4
+    2015-11-28
+        * minor edits to *.md                                       SLOC  523
 v0.4.3
     2015-09-16
         * corrected various control files, countem, MANIFEST.in     SLOC  523
@@ -42,3 +45,4 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
