--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.4.7
+    2016-01-08
+        * testSetup working again                                   SLOC  528
 v0.4.6
     2016-01-03
         * begin conversion to boto3                                 SLOC  523
@@ -51,6 +54,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
