boto3 version of testSetup (skeletal)

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.4.8
+    2016-01-09
+        * boto3 version of testSetup (skeletal)                     SLOC  543
 v0.4.7
     2016-01-08
         * testSetup working again                                   SLOC  528
@@ -54,6 +57,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
