testSetup.py succeeds; misc minor edits

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,10 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.4.9
+    2016-01-10
+        * vmInit, vmList converted to Python3
+        * testSetup.py succeeds                                     SLOC  543
 v0.4.8
     2016-01-09
         * boto3 version of testSetup (skeletal)                     SLOC  543
@@ -57,6 +61,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
