--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.5.2
+    2016-02-26
+        * update LICENSE                                            SLOC  962
 v0.5.1
     2016-02-01
         * minor edits                                               SLOC  962
@@ -68,6 +71,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
