--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 # use 'countem" to count lines - this invokes rm -rf build/
 #--------------------------------------------------------------------
 
+v0.5.3
+    2016-03-28
+        * add and execute auto8it                                   SLOC  964
 v0.5.2
     2016-02-26
         * update LICENSE                                            SLOC  962
@@ -71,6 +74,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
