fix setup.py, license

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 # ~/dev/py/vmmgr/CHANGES
 
+v0.5.7
+    2016-08-28
+        * fix license, setup.py                                     SLOC 1688
 v0.5.6
     2016-06-29
         * add ghpDoc/{css,img}/                                     SLOC 1640
@@ -79,6 +82,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
