--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 # ~/dev/py/vmmgr/CHANGES
 
+v0.5.8
+    2016-10-07
+        * add pylint, coverage                                      SLOC 1868
 v0.5.7
     2016-08-28
         * fix license, setup.py                                     SLOC 1688
@@ -82,6 +85,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
