--- a/TODO
+++ b/TODO
@@ -1,7 +1,7 @@
 # ~/dev/py/vmmgr/TODO
 
 2016-10-07
-    * checkCoverage is checking boto3 !
+    * checkCoverage is checking boto3 !                                 * FIXED
 
 2016-09-17
     * sudo pip3 install boto3                                           * DONE
