--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,11 @@
 # ~/dev/py/vmmgr/CHANGES
 
+v0.5.18
+    2017-09-07
+        * pep8; add tox.ini, *requirements.txt                      SLOC 1876
+v0.5.17
+    2017-07-29
+        * rewrite setup.py, MANIFEST.in; minor edits cfg files      SLOC 1833
 v0.5.16
     2017-06-24
         * restructure for pytest                                    SLOC 1828
@@ -109,6 +115,8 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
+
 
 
 
