code cleanup, pylinting

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 # ~/dev/py/vmmgr/CHANGES
 
+v0.5.20
+    2017-12-20
+        * code cleanup; pylinting                                   SLOC 1891
 v0.5.19
     2017-10-07
         * add projConfig.toml                                       SLOC 1916
@@ -118,6 +121,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
