fix corrupt .dvcz/builds

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 # ~/dev/py/vmmgr/CHANGES
 
+v0.5.22
+    2018-03-19
+        * correct corrupt .dvcz/builds                              SLOC 1889
 v0.5.21
     2018-03-08
         * fix setup.py and tox config files                         SLOC 1888
@@ -124,6 +127,7 @@ v0.1.1
 v0.1.0
     2014-07-16
         * initial import
+
 
 
 
